--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "express": "^4.14.0",
     "firebase": "^3.6.4",
     "google-auth-library": "^0.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^2.2.0"
   }
 }
